Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -87,41 +87,90 @@ textarea{resize:none;height:80px}
         <button class="cat" style="background:var(--naranja);color:white" onclick="abrirPerfil()"><i class="fa-solid fa-user"></i> Mi Perfil</button>
     </div>
 </header>
+<div style="max-width:600px; margin:20px auto; border:1px solid #e0e0e0; background:#ffffff;">
 
-<div id="sidebar" class="sidebar">
-    <button class="close-sidebar" onclick="toggleMenu()"><i class="fa-solid fa-xmark"></i> Cerrar Menú</button>
- <div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; max-width: 600px; margin: 20px auto; border: 1px solid #e0e0e0; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.1); background: #ffffff;">
-    
-      <details style="border-bottom: 1px solid #eee;">
-        <summary style="padding: 18px; cursor: pointer; font-weight: bold; background-color: #f8f9fa; color: #333; display: flex; align-items: center; list-style: none;">
-          <span style="margin-right: 12px; font-size: 1.2em;">📜</span> Términos y Condiciones de CheroMarketApp
-        </summary>
-        <div style="padding: 20px; color: #444; font-size: 14px; line-height: 1.6; border-top: 1px solid #eee;">
-          <h4 style="margin-top: 0;">1. Aceptación de los Términos</h4>
-          <p>Al descargar, instalar o usar CheroMarketApp, el usuario acepta cumplir con estos términos. Si no está de acuerdo, debe abstenerse de utilizar la plataforma.</p>
-          <h4>2. Descripción del Servicio</h4>
-          <p>CheroMarketApp es una plataforma intermediaria que permite a los usuarios publicar anuncios de productos o servicios para su compra y venta en el territorio de El Salvador. La aplicación no es dueña, no vende, ni garantiza los artículos publicados por terceros.</p>
-          <h4>3. Registro y Seguridad</h4>
-          <ul>
-            <li>Solo podrán registrarse personas mayores de 18 años.</li>
-            <li>El usuario es responsable de mantener la confidencialidad de sus credenciales de acceso.</li>
-            <li>Cualquier actividad realizada bajo la cuenta del usuario será su responsabilidad exclusiva.</li>
-          </ul>
-          <h4>4. Reglas de Publicación y Uso</h4>
-          <p>Queda estrictamente prohibido publicar artículos ilegales según las leyes de la República de El Salvador, contenido ofensivo o productos falsificados.</p>
-          <h4>5. Responsabilidad en las Transacciones</h4>
-          <p>CheroMarketApp no participa en la negociación ni entrega. El contacto y la transacción financiera ocurren exclusivamente entre comprador y vendedor.</p>
-          <h4>6. Privacidad de Datos</h4>
-          <p>El uso de datos personales se rige por nuestra Política de Privacidad, cumpliendo con los estándares de protección de datos en el país.</p>
-          <h4>7. Suspensión y Terminación</h4>
-          <p>Nos reservamos el derecho de suspender cuentas que infrinjan estos términos sin previo aviso.</p>
-          <h4>8. Modificaciones</h4>
-          <p>Podemos actualizar estos términos en cualquier momento notificando cambios significativos.</p>
-          <h4>9. Jurisdicción y Ley Aplicable</h4>
-          <p>Leyes de la República de El Salvador. Disputas ante tribunales de San Salvador.</p>
-        </div>
-      </details>
-    
+  <details open>
+    <summary style="padding:15px; font-weight:bold; background:#f8f9fa;">
+      📜 Términos y Condiciones de CheroMarketApp
+    </summary>
+
+    <div style="padding:15px; font-size:14px;">
+      <h4>1. Aceptación de los Términos</h4>
+      <p>Al descargar, instalar o usar CheroMarketApp, el usuario acepta cumplir con estos términos. Si no está de acuerdo, debe abstenerse de utilizar la plataforma.</p>
+
+      <h4>2. Descripción del Servicio</h4>
+      <p>CheroMarketApp es una plataforma intermediaria que permite publicar anuncios en El Salvador. La aplicación no es dueña ni garantiza los artículos publicados.</p>
+
+      <h4>3. Registro y Seguridad</h4>
+      <ul>
+        <li>Solo mayores de 18 años.</li>
+        <li>El usuario es responsable de sus credenciales.</li>
+        <li>Toda actividad bajo la cuenta es su responsabilidad.</li>
+      </ul>
+
+      <h4>4. Reglas de Publicación</h4>
+      <p>Está prohibido publicar artículos ilegales, ofensivos o falsificados.</p>
+
+      <h4>5. Transacciones</h4>
+      <p>CheroMarketApp no participa en pagos ni entregas.</p>
+
+      <h4>6. Privacidad</h4>
+      <p>El uso de datos se rige por nuestra Política de Privacidad.</p>
+
+      <h4>7. Suspensión</h4>
+      <p>Las cuentas que infrinjan estos términos pueden ser suspendidas.</p>
+
+      <h4>8. Modificaciones</h4>
+      <p>Los términos pueden actualizarse en cualquier momento.</p>
+
+      <h4>9. Jurisdicción</h4>
+      <p>Leyes de la República de El Salvador.</p>
+    </div>
+  </details>
+
+  <details open>
+    <summary style="padding:15px; font-weight:bold; background:#f8f9fa;">
+      ⚖️ Política de Privacidad
+    </summary>
+
+    <div style="padding:15px; font-size:14px;">
+      <p><em>Última actualización: 22 de enero de 2026</em></p>
+
+      <h4>1. Información recopilada</h4>
+      <p>Nombre, correo, teléfono, contenido del usuario, ubicación y datos del dispositivo.</p>
+
+      <h4>2. Uso de la información</h4>
+      <p>Para anuncios, notificaciones y seguridad.</p>
+
+      <h4>3. Compartición</h4>
+      <p>Nombre y teléfono pueden ser visibles en anuncios. No vendemos datos.</p>
+
+      <h4>4. Derechos</h4>
+      <p>Puedes editar o eliminar tu cuenta cuando lo desees.</p>
+    </div>
+  </details>
+
+  <details open>
+    <summary style="padding:15px; font-weight:bold; background:#eef6ff;">
+      🛡️ Guía de Seguridad para Cheros
+    </summary>
+
+    <div style="padding:15px; font-size:14px;">
+      <p><strong>🤝 Reuniones:</strong> Lugares públicos y de día.</p>
+      <p><strong>💰 Pagos:</strong> Nunca envíes dinero por adelantado.</p>
+      <p><strong>📦 Verificación:</strong> Revisa productos y documentos antes de pagar.</p>
+    </div>
+  </details>
+
+  <div style="padding:15px; text-align:center;">
+    <strong>✔ Al usar CheroMarketApp aceptas estos términos</strong>
+    <p style="font-size:11px; color:#777;">
+      Has leído y comprendido los documentos legales.
+    </p>
+  </div>
+
+</div>
+
       <details style="border-bottom: 1px solid #eee;">
         <summary style="padding: 18px; cursor: pointer; font-weight: bold; background-color: #f8f9fa; color: #333; display: flex; align-items: center; list-style: none;">
           <span style="margin-right: 12px; font-size: 1.2em;">⚖️</span> Política de Privacidad
