Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
             <select id="estado" style="flex:1">
                 <option value="Nuevo">Nuevo</option>
                 <option value="Usado">Usado</option>
+                <option value="otros">otros</option>
             </select>
         </div>
         
