Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ const db = getFirestore(app);
 
 // --- DATOS Y ESTADO ---
 const svData = {
-    "Ahuachapán": ["Ahuachapán", "Atiquizaya", "Concepción de Ataco", "El Refugio", "Guaymango", "Jujutla", "San Francisco Menéndez"],
+    "Ahuachapán": ["Ahuachapán", "Jujutla", "Atiquizaya", "Concepción de Ataco", "El Refugio", "Guaymango", "Apaneca", "San Francisco Menéndez", "San Lorenzo", "San Pedro Puxtla", "Turín"],
     "Santa Ana": ["Santa Ana", "Chalchuapa", "Metapán", "Coatepeque", "El Congo", "San Sebastián Salitrillo"],
     "Sonsonate": ["Sonsonate", "Acajutla", "Armenia", "Izalco", "Juayúa", "Nahuizalco"],
     "La Libertad": ["Santa Tecla", "Antiguo Cuscatlán", "Colón", "Quezaltepeque", "San Juan Opico", "Zaragoza"],
